Wemos Barn from general tamplate

--- a/boards/esp8266/d1_mini.yaml
+++ b/boards/esp8266/d1_mini.yaml
@@ -32,6 +32,10 @@ esp8266:
     version: latest
   restore_from_flash: ${restorefromflash}
 
+time:
+  - platform: homeassistant
+    id: homeassistant_time
+
 # Status led
 status_led:
   pin:
