--- a/boards/esp8266/d1_mini_pro.yaml
+++ b/boards/esp8266/d1_mini_pro.yaml
@@ -26,10 +26,14 @@ defaults:
   restorefromflash: false
 
 esp8266:
-  board: esp01_1m
+  board: d1_mini_pro
   framework:
     version: latest
   restore_from_flash: ${restorefromflash}
+
+time:
+  - platform: homeassistant
+    id: homeassistant_time
 
 # Status led
 status_led:
