--- a/esphome-web-c2e8c9.yaml
+++ b/esphome-web-c2e8c9.yaml
@@ -21,6 +21,8 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
+web_server:
+  
 # Device Specific Config
 binary_sensor:
   - platform: gpio
