--- a/sonoff-s26-1.yaml
+++ b/sonoff-s26-1.yaml
@@ -1,55 +1,44 @@
-esphome:
-  name: sonoff-s26-1
-  friendly_name: SonOff S26 (1)
+# -----------------------------------------------------------------------------
+# Substitution Variables
+# -----------------------------------------------------------------------------
+substitutions:
+  device_internal_name: sonoffs26_1
+  device_friendly_name: SonOff S26 (1)
+  device_wifi_name: SonOffS26_1
+  device_sampling_time: 60s
+  
+# -----------------------------------------------------------------------------
+# Common Packages
+# -----------------------------------------------------------------------------
+packages:
+  # ---------------------------------------------------------------------------
+  # Board
+  # ---------------------------------------------------------------------------
+  board: !include boards/esp8266/SonOff_S26.yaml
+  settings: !include common/core/settings.yaml
 
-esp8266:
-  board: esp01_1m
+  # ---------------------------------------------------------------------------
+  # Network
+  # ---------------------------------------------------------------------------
+  wifi: !include common/network/wifi.yaml
+  webserver: !include
+    file: common/network/webserver.yaml
+    vars:
+      version: 2
 
-# Enable logging
-logger:
+captive_portal: !remove
+# -----------------------------------------------------------------------------
+# Custom Device Configuration
+# -----------------------------------------------------------------------------
 
-# Enable Home Assistant API
-api:
-  encryption:
-    key: "NLOQTgpq6CnCwZdEK2nkRD/LDmzYapUBvyiSdtu7awA="
+# -----------------------------------------------------------------------------
+# Sensors
+# -----------------------------------------------------------------------------
 
-ota:
-  - platform: esphome
-    password: "bd8e00995f52ef023c942e40a427d42c"
+# -----------------------------------------------------------------------------
+# Binary Sensors
+# -----------------------------------------------------------------------------
 
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "Sonoff-S26-1 Fallback Hotspot"
-    password: "JZ36ylnFYcZv"
-
-captive_portal:
-
-web_server:
-
-binary_sensor:
-  - platform: gpio
-    pin:
-      number: GPIO0
-      mode: INPUT_PULLUP
-      inverted: True
-    name: "Sonoff S26_1 Button"
-    on_press:
-      - switch.toggle: relay
-  - platform: status
-    name: "Sonoff S26_1 Status"
-
-sensor:
-  - platform: wifi_signal
-    name: "sonoffs26_1 WiFi Signal"
-    update_interval: 60s
-switch:
-  - platform: gpio
-    name: "Sonoff S26_1 Relay"
-    pin: GPIO12
-    id: "relay"
-  - platform: restart
-    name: "sonoffs26_1 Restart"   
+# -----------------------------------------------------------------------------
+# Switches
+# -----------------------------------------------------------------------------
